test/TestPhases/typechecker/invalid/noUintHoldNegValue.blc
module noUintHoldNegValue

activity start ()()

    var z: uint64 = -255

    await true
end
